Make project compatible with java 11
Signed-off-by: Marvin Froeder <velo.br@gmail.com>